Enhance movie detail and discovery features with dynamic navigation, improved UI elements, and refined API interactions

--- a/src/app/discover/discover.page.html
+++ b/src/app/discover/discover.page.html
@@ -74,7 +74,7 @@
 
       <ng-template #bannersContent>
         <div class="big-banner-scroll">
-          <div class="big-banner-item animate__animated animate__fadeIn animate__fast" *ngFor="let banner of banners">
+          <div class="big-banner-item animate__animated animate__fadeIn animate__fast" *ngFor="let banner of banners" (click)="navigateToDetail('movie', banner.id)">
             <!-- <div class="big-banner-item" *ngFor="let banner of banners" (click)="navigateToDetail('movie', banner.id)"></div> -->
             <img [src]="banner.imageUrl ? banner.imageUrl : 'url(assets/placeholder-backdrop.png)'" alt="{{ banner.title }}" />
             <!-- <img [src]="banner.imageUrl" alt="{{ banner.title }}" /> -->
