--- a/src/app/movie-detail/movie-detail.page.html
+++ b/src/app/movie-detail/movie-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header [class.scrolled]="isScrolled" class="custom-blur-header">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="goHome()">
+      <ion-button (click)="goBack()">
         <ion-icon name="arrow-back-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
