--- a/src/app/discover-actors/discover-actors.component.html
+++ b/src/app/discover-actors/discover-actors.component.html
@@ -1,3 +1,46 @@
-<p>
-  discover-actors works!
-</p>
+<div class="animate__animated animate__fadeIn animate__fast">
+
+  <div *ngIf="isLoadingPersons">
+    <ion-skeleton-text animated style="width: 280px; height: 160px; border-radius: 8px;"></ion-skeleton-text>
+  </div>
+
+  <ng-container *ngIf="!isLoadingPersons">
+
+    <div class="section-header">
+      <h2>Popular</h2>
+    </div>
+
+    <!-- Big Banner Scroll (Top 5) -->
+    <div class="big-banner-scroll">
+      <div class="big-banner-item" *ngFor="let actor of popularPersons.slice(0,5)"
+        (click)="navigateToPersonDetail(actor.id)">
+        <img
+          [src]="actor.profile_path ? 'https://image.tmdb.org/t/p/w500' + actor.profile_path : 'assets/placeholder-backdrop.png'" />
+        <div class="banner-overlay">
+          <h2>{{ actor.name }}</h2>
+          <p>{{ actor.known_for_department }}</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Horizontal Scroll -->
+    <div class="person-scroll">
+      <div class="person-card" *ngFor="let actor of popularPersons.slice(5)">
+        <img
+          [src]="actor.profile_path ? 'https://image.tmdb.org/t/p/w300' + actor.profile_path : 'assets/person-placeholder.png'" />
+        <p>{{ actor.name }}</p>
+      </div>
+    </div>
+
+    <!-- <div class="horizontal-scroll">
+          <div class="actor-card" *ngFor="let actor of trendingActors" (click)="navigateToActorDetail(actor.id)">
+            <img [src]="'https://image.tmdb.org/t/p/w300' + actor.profile_path" alt="{{ actor.name }}">
+            <h4>{{ actor.name }}</h4>
+            <p>Popularity: {{ actor.popularity | number:'1.0-0' }}</p>
+          </div>
+        </div> -->
+
+
+  </ng-container>
+
+</div>
