--- a/src/app/discover-bollywood-upcoming-movies/discover-bollywood-upcoming-movies.component.html
+++ b/src/app/discover-bollywood-upcoming-movies/discover-bollywood-upcoming-movies.component.html
@@ -1,3 +1,30 @@
-<p>
-  discover-bollywood-upcoming-movies works!
-</p>
+<!-- Big Banner Section -->
+<div class="section-header">
+  <h2>Upcoming</h2>
+</div>
+
+<div *ngIf="isLoading; else bannersContent">
+  <!-- Placeholders -->
+  <div class="big-banner-scroll">
+    <!-- Repeat the skeleton for as many banner items you’d like to show as placeholders -->
+    <div class="big-banner-item" *ngFor="let placeholder of [1,2,3]">
+      <ion-skeleton-text animated style="width: 280px; height: 160px; border-radius: 8px;"></ion-skeleton-text>
+    </div>
+  </div>
+</div>
+
+<ng-template #bannersContent>
+  <div class="big-banner-scroll">
+    <div class="big-banner-item animate__animated animate__fadeIn animate__fast" *ngFor="let banner of banners"
+      (click)="navigateToDetail('movie', banner.id)">
+      <!-- <div class="big-banner-item" *ngFor="let banner of banners" (click)="navigateToDetail('movie', banner.id)"></div> -->
+      <img [src]="banner.imageUrl ? banner.imageUrl : 'url(assets/placeholder-backdrop.png)'"
+        alt="{{ banner.title }}" />
+      <!-- <img [src]="banner.imageUrl" alt="{{ banner.title }}" /> -->
+      <div class="banner-overlay">
+        <h2>{{ banner.title }}</h2>
+        <p>{{ banner.subtitle | date:'MMM d, y' }}</p>
+      </div>
+    </div>
+  </div>
+</ng-template>
