Refactor top rated components

--- a/src/app/discover-bollywood/discover-bollywood.component.html
+++ b/src/app/discover-bollywood/discover-bollywood.component.html
@@ -1,4 +1,6 @@
 <div class="animate__animated animate__fadeIn animate__fast">
   <app-discover-bollywood-upcoming-movies></app-discover-bollywood-upcoming-movies>
   <app-discover-bollywood-trending-movies></app-discover-bollywood-trending-movies>
+  <app-discover-bollywood-upcoming-tv></app-discover-bollywood-upcoming-tv>
+  <app-discover-bollywood-trending-tv></app-discover-bollywood-trending-tv>
 </div>
