--- a/src/app/discover-top-rated-foreign-tv/discover-top-rated-foreign-tv.component.html
+++ b/src/app/discover-top-rated-foreign-tv/discover-top-rated-foreign-tv.component.html
@@ -1,3 +1,10 @@
-<p>
-  discover-top-rated-foreign-tv works!
-</p>
+<div class="section-header">
+  <h2>Top Rated TV</h2>
+  <ion-button fill="clear" (click)="navigateToList('tv')">all</ion-button>
+</div>
+<div class="horizontal-scroll">
+  <div class="item animate__animated animate__flipInY animate__fast" *ngFor="let tv of topRatedTV"
+    (click)="navigateToDetail('tv', tv.id!)">
+    <img [src]="tv.poster_path ? 'https://image.tmdb.org/t/p/w300' + tv.poster_path : 'assets/placeholder.png'" />
+  </div>
+</div>
