--- a/src/app/discover-top-rated-foreign-movies/discover-top-rated-foreign-movies.component.html
+++ b/src/app/discover-top-rated-foreign-movies/discover-top-rated-foreign-movies.component.html
@@ -1,3 +1,10 @@
-<p>
-  discover-top-rated-foreign-movies works!
-</p>
+<div class="section-header">
+  <h2>Top Rated Movies</h2>
+  <ion-button fill="clear" (click)="navigateToList('movie')">all</ion-button>
+</div>
+<div class="horizontal-scroll">
+  <div class="item animate__animated animate__flipInY animate__fast" *ngFor="let movie of topRatedMovies"
+    (click)="navigateToDetail('movie', movie.id!)">
+    <img [src]="movie.poster_path ? 'https://image.tmdb.org/t/p/w300' + movie.poster_path : 'assets/placeholder.png'" />
+  </div>
+</div>
