--- a/src/app/top-rated-tv/top-rated-tv.page.html
+++ b/src/app/top-rated-tv/top-rated-tv.page.html
@@ -12,28 +12,36 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-padding" (ionInfinite)="loadMore($event)">
-  <!-- Full-page Skeleton on First Load -->
   <div class="media-grid" *ngIf="firstLoad">
-    <div class="media-item skeleton" *ngFor="let i of [1,2,3,4,5,6,7,8]">
-      <ion-skeleton-text animated style="width: 100%; height: 200px; border-radius: 10px;"></ion-skeleton-text>
+    <div class="media-card skeleton" *ngFor="let i of [1,2,3,4,5,6,7,8,9]">
+      <ion-skeleton-text animated class="poster-skeleton"></ion-skeleton-text>
+      <ion-skeleton-text animated style="width: 70%; height: 16px; margin-top: 0.5rem;"></ion-skeleton-text>
     </div>
   </div>
 
-  <!-- Real Content -->
   <div class="media-grid" *ngIf="!firstLoad">
-    <div class="media-item" *ngFor="let tv of tvList" (click)="goToTvDetail(tv.id!)">
-      <img [src]="tv.poster_path ? 'https://image.tmdb.org/t/p/w300' + tv.poster_path : 'assets/placeholder.png'"
-        alt="{{ tv.name }}" />
+    <div class="media-card" *ngFor="let tv of tvList" (click)="goToTvDetail(tv.id!)">
+      <div class="poster-wrapper">
+        <img [src]="tv.poster_path ? 'https://image.tmdb.org/t/p/w342' + tv.poster_path : 'assets/placeholder.png'"
+          [alt]="tv.name" />
+      </div>
+      <div class="movie-info">
+        <h4 class="title">{{ tv.name }}</h4>
+        <span class="rating-badge" *ngIf="tv.vote_average">
+          ★ {{ tv.vote_average | number: '1.0-1' }}
+        </span>
+      </div>
     </div>
 
-    <!-- Paginated Loading Placeholder -->
-    <div class="media-item skeleton" *ngIf="isPaginating" style="grid-column: span 2;">
-      <ion-skeleton-text animated style="width: 100%; height: 200px; border-radius: 10px;"></ion-skeleton-text>
+    <!-- Infinite scroll loader -->
+    <div class="media-card skeleton" *ngIf="isPaginating">
+      <ion-skeleton-text animated class="poster-skeleton"></ion-skeleton-text>
+      <ion-skeleton-text animated style="width: 70%; height: 16px; margin-top: 0.5rem;"></ion-skeleton-text>
     </div>
   </div>
 
   <ion-infinite-scroll threshold="100px" position="bottom">
-    <ion-infinite-scroll-content loadingSpinner="dots" loadingText="Loading more TV...">
-    </ion-infinite-scroll-content>
+    <ion-infinite-scroll-content loadingSpinner="dots"
+      loadingText="Loading more movies..."></ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ion-content>
