--- a/src/app/tv-detail/tv-detail.page.html
+++ b/src/app/tv-detail/tv-detail.page.html
@@ -1,8 +1,154 @@
-<app-header></app-header>
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">TvDetail</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-header [class.scrolled]="isScrolled" class="custom-blur-header">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <ion-icon name="arrow-back-outline" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title *ngIf="isScrolled">{{ tvDetail?.name }}</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content *ngIf="tvDetail" (ionScroll)="onScroll($event)" scrollEvents="true" class="movie-detail-content">
+  <div class="backdrop-wrapper">
+    <img class="backdrop-image"
+      [src]="tvDetail.backdrop_path ? 'https://image.tmdb.org/t/p/original' + tvDetail.backdrop_path : 'assets/placeholder-backdrop.png'"
+      [alt]="tvDetail.name" />
+    <div class="backdrop-gradient"></div>
+    <img class="floating-poster"
+      [src]="tvDetail.poster_path ? 'https://image.tmdb.org/t/p/w300' + tvDetail.poster_path : 'assets/placeholder.png'"
+      [alt]="tvDetail.name" />
+    <div class="floating-bookmark" (click)="toggleBookmarkState()">
+      <ion-thumbnail>
+        <img alt="Bookmark" [src]="bookmarkIcon" />
+      </ion-thumbnail>
+    </div>
+  </div>
+
+  <div class="content-section">
+    <h1 class="movie-title">{{ tvDetail.name }}</h1>
+    <p class="tagline" *ngIf="tvDetail.tagline">"{{ tvDetail.tagline }}"</p>
+    <div class="meta-info">
+      <ion-chip color="medium">
+        <ion-icon name="calendar-outline" slot="start"></ion-icon>
+        <ion-label>{{ tvDetail.first_air_date }}</ion-label>
+      </ion-chip>
+
+      <ion-chip color="medium">
+        <ion-icon name="time-outline" slot="start"></ion-icon>
+        <ion-label>{{ tvDetail.episode_run_time }} min</ion-label>
+      </ion-chip>
+
+      <ion-chip color="warning" class="imdb-chip">
+        <img src="assets/imdb-96.png" alt="IMDb" class="imdb-logo" />
+        <ion-label>{{ tvDetail.vote_average | number: '1.1-1' }}</ion-label>
+      </ion-chip>
+    </div>
+
+    <div class="genre-chips">
+      <ion-chip *ngFor="let genre of tvDetail.genres">
+        {{ genre.name }}
+      </ion-chip>
+    </div>
+
+    <div class="media-row" *ngIf="safeYoutubeUrl">
+      <div class="trailer-embed">
+        <iframe [src]="safeYoutubeUrl" title="YouTube video" allowfullscreen
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+        </iframe>
+      </div>
+    </div>
+
+    <div class="overview">
+      <h2>Overview</h2>
+      <p *ngIf="tvDetail.overview; else noOverview">{{ tvDetail.overview }}</p>
+      <ng-template #noOverview>
+        <p>No overview available.</p>
+      </ng-template>
+    </div>
+
+    <div class="details-grid">
+      <div>
+        <h3>Status</h3>
+        <p>{{ tvDetail.status }}</p>
+      </div>
+      <div>
+        <h3>Budget/Revenue</h3>
+        <!-- <p>${{ tvDetail. | numberSuffix }}/${{ movieDetail.revenue | numberSuffix }}</p> -->
+      </div>
+    </div>
+  </div>
 </ion-content>
+
+<!-- <ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/home"></ion-back-button>
+    </ion-buttons>
+    <ion-title *ngIf="isScrolled">{{ tvDetail?.name }}</ion-title>
+    <ion-buttons slot="end">
+      <ion-button fill="clear" (click)="toggleWatchlist()">
+        <ion-icon
+          [name]="isInWatchlist ? 'bookmark' : 'bookmark-outline'"
+          slot="icon-only"
+        ></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true" (ionScroll)="onScroll($event)">
+  <div *ngIf="tvDetail" class="tv-banner">
+    <img
+      [src]="'https://image.tmdb.org/t/p/original' + tvDetail.backdrop_path"
+      alt="Backdrop"
+    />
+    <div class="overlay"></div>
+    <div class="tv-info">
+      <h1>{{ tvDetail.name }}</h1>
+      <ion-button size="small" (click)="toggleBookmarkState()" fill="outline">
+        <ion-icon
+          [name]="isBookmarked ? 'heart' : 'heart-outline'"
+          slot="start"
+        ></ion-icon>
+        {{ isBookmarked ? 'Bookmarked' : 'Bookmark' }}
+      </ion-button>
+    </div>
+  </div>
+
+  <div class="tv-meta">
+    <ion-chip color="medium">
+      <ion-icon name="calendar-outline" slot="start"></ion-icon>
+      <ion-label>{{ tvDetail?.first_air_date }}</ion-label>
+    </ion-chip>
+    <ion-chip color="medium" *ngIf="tvDetail?.episode_run_time?.length">
+      <ion-icon name="time-outline" slot="start"></ion-icon>
+      <ion-label>{{ tvDetail?.episode_run_time![0] }} min</ion-label>
+    </ion-chip>
+    <ion-chip color="medium">
+      <ion-icon name="albums-outline" slot="start"></ion-icon>
+      <ion-label>{{ tvDetail?.number_of_seasons }} Season(s)</ion-label>
+    </ion-chip>
+  </div>
+
+  <div class="tv-overview">
+    <h2>Overview</h2>
+    <p *ngIf="tvDetail?.overview; else noOverview">
+      {{ tvDetail?.overview }}
+    </p>
+    <ng-template #noOverview>
+      <p><i>No overview available.</i></p>
+    </ng-template>
+  </div>
+
+  <div class="tv-trailer" *ngIf="safeYoutubeUrl">
+    <h2>Trailer</h2>
+    <iframe
+      width="100%"
+      height="200"
+      [src]="safeYoutubeUrl"
+      frameborder="0"
+      allowfullscreen
+    ></iframe>
+  </div>
+</ion-content> -->
