Remove commented-out TV components and trending content placeholder for cleaner code

--- a/src/app/discover-top-rated/discover-top-rated.component.html
+++ b/src/app/discover-top-rated/discover-top-rated.component.html
@@ -1,6 +1,6 @@
 <div class="animate__animated animate__fadeIn animate__fast">
   <app-discover-top-rated-foreign-movies></app-discover-top-rated-foreign-movies>
   <app-discover-top-rated-foreign-tv></app-discover-top-rated-foreign-tv>
-  <app-discover-top-rated-desi-movies></app-discover-top-rated-desi-movies>
-  <app-discover-top-rated-desi-tv></app-discover-top-rated-desi-tv>
+  <!-- <app-discover-top-rated-desi-movies></app-discover-top-rated-desi-movies>
+  <app-discover-top-rated-desi-tv></app-discover-top-rated-desi-tv> -->
 </div>
